Fix application layout z-index of Safari

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -22,6 +22,7 @@
     height: 100%;
   }
   .player {
+    position: relative; /* Fix z-index of Safari */
     background-color: rgba(0, 0, 0, 0.6);
     line-height: 32px;
     height: 32px;
@@ -32,11 +33,13 @@
     }
   }
   .container {
+    position: relative; /* Fix z-index of Safari */
     flex: 1;
     z-index: 1;
     overflow: scroll;
   }
   .navbar {
+    position: relative; /* Fix z-index of Safari */
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
   }
